--- a/zainab-portfolio/package.json
+++ b/zainab-portfolio/package.json
@@ -19,6 +19,7 @@
     "npm": "^11.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-photo-view": "^1.2.7",
     "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
